--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,78 +1,84 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  /* more on this crazy alphanumerical value in a minute! */
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
 
 /* apply styles to <header> */
 header {
-    padding: 20px 35px;
-    background-color: #39a6b2;
-  }
-  header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-;
-  }
-  
-  header a {
-    text-decoration: none;
-    color: #fce138;
-  }
-  body {
-    /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-  header nav {
-    float: right;
-    margin: 7px 0;
-  }
-  header nav ul li {
-    display: inline;
-  }
-  header nav ul li a {
-    margin: 0 30px;
-    font-weight: lighter;
-    font-size: 22px;
-  }
-  header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-    display: inline;
-  }
+  padding: 20px 35px;
+  background-color: #39a6b2;
+}
 
-  footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-  }
-  footer h2 {
-    display: inline;
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-  }
-  footer div {
-    float: right;
-    line-height: 1.5;
-    text-align: right;
-  }
-  footer a {
-    color: #024e76;
-  }
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
+  display: inline;
+}
+header a {
+  text-decoration: none;
+  color: #fce138;
+}
+
+header nav {
+  float: right;
+  margin: 7px 0;
+}
+
+header nav ul li {
+  display: inline;
+}
+
+header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 22px;
+}
+
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+
+footer a {
+  color: #024e76;
+}
+
+section {
+  padding: 60px;
+}
+
 /* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
   position: relative;
 }
-
+/* Hero Style End */
 
 .hero-form {
   border: 3px solid #024e76;
@@ -85,15 +91,10 @@ header {
   right: 140px;
 }
 
-.hero-form p {
-  margin: 5px 0 15px 0;
-}
-
 .hero-form h3 {
   font-size: 24px;
   margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -119,6 +120,29 @@ header {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* HERO STYLES END */
-
-
+/*What-We-Do-Section*/
+.intro {
+  text-align: center;
+}
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+}
+.intro h2 {
+  /* add this alongside your other declarations */
+  display: inline-block;
+}
+.intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+}
+.intro p {
+  /* add this alongside your other declarations */
+  margin: 0 auto;
+}
